--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -2,3 +2,14 @@
     margin: 0;
     border: 0;
 }
+body{
+ /*
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;*/
+}
+.container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
