--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -11,5 +11,23 @@ body{
 .container{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
+}
+.p1{
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    background-color: rgb(8, 78, 20);
+}
+h1{
+    text-align: center;
+    color: darkgreen;
+}
+img{
+    margin: 10px;
+
+    width: 80dvw;
+    height: 70dvh;
 }
