--- a/css/stylefaq.css
+++ b/css/stylefaq.css
@@ -15,21 +15,50 @@ form{
     justify-content: center;
     flex-direction: column;
 }
-input{
+input {
     margin: 5px;
-    border-radius: 1px 0px 15px 0px;
+    border-radius: 15px 0px 15px 0px;
     border: none;
     width: 80vw;
     height: 5vh;
+    text-indent: 15px;
 }
 .nome, .email, .telefone, .mensagem{
     display: flex;
     flex-direction: column;
 }
  label{
+    margin: 10px;
    margin-left:15px ;
-   color: green;
+   color: rgb(255, 255, 255);
 }
 h1{
     color: green;
+}
+h2{
+    color: white;
+}
+.formulario{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    height: 80dvh;
+    background-color: rgb(0, 70, 11);
+}
+input[type="submit"]{
+    margin: 10px;
+    width: 80vw;
+    height: 6vh;
+    text-indent: 0px;
+    border-radius: 0px 15px 0px 15px;
+    font-size: medium;
+    background-color: forestgreen;
+    color: white;
+}
+textarea{
+    border-radius: 10px;
+    width: 80vw;
+    height: 20vh;
+    text-indent: 15px;
 }
