--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -3,7 +3,7 @@
     border: 0;
 }
 body{
-    background-color: lightgrey;
+    background-color: rgb(240, 234, 234);
  /*
     flex-direction: column;
     justify-content: center;
@@ -16,11 +16,12 @@ body{
     flex-direction: column;
 }
 .p1{
+    font-size: large;
     color: white;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 15px 0px 15px 0px;
+    padding: 15px;
     margin: 10px;
-    background-color: rgb(8, 78, 20);
+    background-color: rgb(24, 107, 38);
 }
 h1{
     text-align: center;
@@ -38,77 +39,34 @@ img[name="img-1"]{
 }
 
 
-/*Style back btn*/
-.button {
-    display: block;
-    position: relative;
-    width: 56px;
-    height: 56px;
-    margin: 0;
-    overflow: hidden;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    border: 0;
-  }
-  
-  .button:before,
-  .button:after {
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    inset: 6px;
-  }
-  
-  .button:before {
-    border: 4px solid #f0eeef;
-    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-      transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-  }
-  
-  .button:after {
-    border: 4px solid #96daf0;
-    transform: scale(1.3);
-    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-      transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    opacity: 0;
-  }
-  
-  .button:hover:before,
-  .button:focus:before {
-    opacity: 0;
-    transform: scale(0.7);
-    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-      transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  }
-  
-  .button:hover:after,
-  .button:focus:after {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-      transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-  }
-  
-  .button-box {
+.how-to-recycle{
     display: flex;
-    position: absolute;
-    top: 4px;
-    left: 0;
-  }
-  
-  .button-elem {
-    display: block;
-    width: 20px;
-    height: 20px;
-    margin: 17px 18px 0 18px;
-    transform: rotate(180deg);
-    fill: #f0eeef;
-  }
-  
-  .button:hover .button-box,
-  .button:focus .button-box {
-    transition: 0.4s;
-    transform: translateX(-56px);
-  }
- 
+    flex-direction: column;
+}
+[id="passo1"]{
+    margin:40px;
+    border-radius: 10px;
+    background-color: rgb(38, 192, 71);
+    padding: 10px;
+}
+h5{
+    color: white;
+}
+[id="passo2"]{
+    margin:40px;
+    border-radius: 10px;
+    background-color:rgb(38, 192, 71);
+    padding: 10px;
+}
+.img-txt1{
+    display: flex;
+}
+.img-txt2{
+    display: flex;
+}
+[id="passo3"]{
+    margin:40px;
+    border-radius: 10px;
+    background-color: rgb(38, 192, 71);
+    padding: 10px;
+}
