--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -20,7 +20,7 @@ body{
     font-size: large;
     color: white;
     border-radius: 15px 0px 15px 0px;
-    padding: 15px;
+    padding: 10px 30px;
     margin: 10px;
     background-color: rgb(24, 107, 38);
 }
@@ -75,13 +75,13 @@ img[name="img-1"]{
 }
 .img-txt2{
     display: flex;
+    justify-content: space-around;
 }
 
 .how-to-recycle{
-    max-width: 80vw;
+    width:100vw;
 }
 footer{
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
+display: flex;
+flex-direction: column;
 }
